name:                fedmsg2statsd
version:             0.1.0.0
synopsis:            A fedmsg -> statsd proxy
-- description:
homepage:            https://github.com/fedora-infra/fedmsg2statsd
license:             BSD2
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          relrod@redhat.com
copyright:           (c) 2015 Red Hat, Inc.
category:            Fedora, Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable fedmsg2statsd
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4 && < 5
                     , bytestring >= 0.10 && < 1
                     , lens >= 4 && < 5
                     , lens-aeson >= 1 && < 2
                     , monad-control
                     , network >= 2.3 && < 3
                     , statsd >= 0.1 && < 1
                     , text >= 1 && < 2
                     , transformers >= 0.3
                     , zeromq3-haskell >= 0.5 && < 0.7
  -- hs-source-dirs:
  default-language:    Haskell2010
